testsuite/tests/misc/typerepo_defer_attr_fail/test.out
test.py:10: error: FooNode has no 'does_not_exist' attribute
Done
